# pyfrx

aur/: .gitignore  PKGBUILD
pip/: .gitignore  README.md  pyfrx.py  setup.cfg  setup.py
pip/pyfrx/: pyfrx.py  supported_currencies.py
