[metadata]
name = pyfrx
version = 0.0.2
author = siphr
author_email = pypi@techtum.dev
description = Forex Conversions & Rates.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.techtum.dev/work-pyfrx-220105.html
license = MIT
project_urls =
    Bug Tracker = https://github.com/siphr/pyfrx/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
py_modules = pyfrx,supported_currencies
python_requires = >=3.6
